# FiveLang

./: .gitconfig  README.md  getlist.py  github_fetcher.go  history  main.swift
Swift/: Package.swift
Swift/mac/: main.swift
Swift/src/: Logger.swift  NewModel.swift
github-fetcher-ts/: package-lock.json  package.json  tsconfig.json
github-fetcher-ts/src/: index.ts
github_repo_fetcher/: Cargo.toml
github_repo_fetcher/src/: main.rs
